[gd_scene load_steps=5 format=2]

[ext_resource path="res://Engine/GameObjects/Basic/AirBubble/AirBubble.gd" type="Script" id=1]
[ext_resource path="res://Engine/BaiscMaterial/Shader/BubbleShield.shader" type="Shader" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.25

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/fuwafuwa_speed = 1.458
shader_param/fuwafuwa_size = 0.111
shader_param/outline_color = Color( 0.7, 1, 1.3, 1 )
shader_param/outline_ratio = 1.0
shader_param/noise_speed = 0.2
shader_param/noise_scale = 0.5
shader_param/deform = Vector3( 1, 1, 1 )

[node name="AirBubble" type="Area"]
monitorable = false
collision_layer = 128
collision_mask = 128
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="."]
material_override = SubResource( 2 )
radius = 0.25
radial_segments = 16
rings = 8

[node name="LifeTween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_AirBubble_area_entered"]
[connection signal="tween_all_completed" from="LifeTween" to="." method="_on_LifeTween_tween_all_completed"]
